--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -65,7 +65,7 @@
       (o2b-test-fetch-src-block "o2b-test-post-subtree-output")
       (o2b-test-buffer-with-block
        "o2b-test-post-subtree-input"
-       (cdr (assoc "description" (org2blog/wp-parse-entry t)))))))
+       (cdr (assoc "description" (org2blog/wp--export-as-post t)))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -77,7 +77,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-post-subtree-input"
                (org-demote-subtree)
-               (cdr (assoc "description" (org2blog/wp-parse-entry t)))))))
+               (cdr (assoc "description" (org2blog/wp--export-as-post t)))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -89,7 +89,7 @@
        "o2b-test-post-subtree-input"
        (let ((org2blog/wp-export-options (copy-sequence org2blog/wp-export-options)))
          (plist-put org2blog/wp-export-options :with-toc t)
-         (cdr (assoc "description" (org2blog/wp-parse-entry t))))))))
+         (cdr (assoc "description" (org2blog/wp--export-as-post t))))))))
 #+END_SRC
 *** Data
 #+NAME: o2b-test-post-subtree-input
@@ -157,7 +157,7 @@
                (let ()
                  (org-shifttab 4)
                  (goto-char (point-max))
-                 (cdr (assoc "description" (org2blog/wp-parse-entry nil))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post nil))))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -167,7 +167,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-post-buffer-hangs-input"
                (let ()
-                 (cdr (assoc "description" (org2blog/wp-parse-entry nil))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post nil))))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -175,7 +175,7 @@
     (let ((post (o2b-test-buffer-with-block
                  "o2b-test-tags-as-categories"
                  (let ((org2blog/wp-use-tags-as-categories t))
-                   (org2blog/wp-parse-entry nil)))))
+                   (org2blog/wp--export-as-post nil)))))
 
       (should (equal (cdr (assoc "categories" post)) (list "tags" "sacha")))
       (should (equal (cdr (assoc "tags" post)) nil))))
@@ -185,7 +185,7 @@
   (ert-deftest should-not-use-tags-as-categories ()
     (let ((post (o2b-test-buffer-with-block
                  "o2b-test-tags-as-categories"
-                 (org2blog/wp-parse-entry nil))))
+                 (org2blog/wp--export-as-post nil))))
 
       (should (equal (cdr (assoc "categories" post)) nil))
       (should (equal (cdr (assoc "tags" post)) (list "tags" "sacha")))))
@@ -290,7 +290,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-parse-latex-input"
                (let ((org2blog/wp-use-wp-latex nil))
-                 (cdr (assoc "description" (org2blog/wp-parse-entry t))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post t))))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -301,7 +301,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-parse-latex-input"
                (let ((org2blog/wp-use-wp-latex t))
-                 (cdr (assoc "description" (org2blog/wp-parse-entry t))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post t))))))))
 #+END_SRC
 
 *** Data
@@ -364,7 +364,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-post-awk-source-input"
                (let ()
-                 (cdr (assoc "description" (org2blog/wp-parse-entry t))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post t))))))))
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
   (ert-deftest should-post-subtree-with-source-code ()
@@ -373,7 +373,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-source-subtree-error-input"
                (let ()
-                 (cdr (assoc "description" (org2blog/wp-parse-entry t))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post t))))))))
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
   (ert-deftest should-not-confuse-regexp-as-latex ()
@@ -383,7 +383,7 @@
              (o2b-test-buffer-with-block
                "o2b-test-regexp-source-becomes-latex-input"
                (let ()
-                 (cdr (assoc "description" (org2blog/wp-parse-entry nil))))))))
+                 (cdr (assoc "description" (org2blog/wp--export-as-post nil))))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -393,7 +393,7 @@
              (o2b-test-buffer-with-block
               "o2b-test-greater-than-should-not-be-escaped"
               (let ()
-                (cdr (assoc "description" (org2blog/wp-parse-entry nil))))))))
+                (cdr (assoc "description" (org2blog/wp--export-as-post nil))))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -403,7 +403,7 @@
              (o2b-test-buffer-with-block
               "o2b-test-greater-than-should-not-be-escaped"
               (let ((org2blog/wp-use-sourcecode-shortcode nil))
-                (cdr (assoc "description" (org2blog/wp-parse-entry nil))))))))
+                (cdr (assoc "description" (org2blog/wp--export-as-post nil))))))))
 #+END_SRC
 
 *** Data
@@ -564,7 +564,6 @@
 
 #+END_SRC
 
-
 ** Login
 #+BEGIN_SRC emacs-lisp
   (ert-deftest should-login ()
@@ -578,7 +577,7 @@
     (let* ((org-directory (expand-file-name (make-temp-name temporary-file-directory))))
       (o2b-test-buffer-with-block
        "o2b-test-post-awk-source-input"
-       (let ((post (org2blog/wp-parse-entry t))
+       (let ((post (org2blog/wp--export-as-post t))
              (dashboard (expand-file-name (car org2blog/wp-track-posts) org-directory)))
          (org2blog/wp-save-details post "" nil t)
          (should (file-exists-p dashboard))
@@ -594,7 +593,7 @@
              "20130914T12:59:00+0000" ;; converted to UTC
              (o2b-test-buffer-with-block
               "o2b-test-persist-date"
-              (cdr (assoc "date" (org2blog/wp-parse-entry nil)))))))
+              (cdr (assoc "date" (org2blog/wp--export-as-post nil)))))))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
@@ -603,7 +602,7 @@
      "o2b-test-insert-date"
      (should (string-equal
               ;; note: order is important since date is written during parse...
-              (cdr (assoc "date" (org2blog/wp-parse-entry nil)))
+              (cdr (assoc "date" (org2blog/wp--export-as-post nil)))
               (org2blog/wp--convert-timestamp-to-iso (org2blog/wp-get-option "DATE"))))))
 #+END_SRC
 
