Fix bug in returning parent id, when name of page is used.
Should check for parent id, based on name, before trying to use the
name as an id.

--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -210,11 +210,19 @@
       (should (equal (cdr (assoc "parent" post)) "20"))))
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (ert-deftest should-get-parent-id ()
+    (let ((post (o2b-test-buffer-with-block
+                 "o2b-test-get-parent-id"
+                 (org2blog/wp--export-as-post nil))))
+      (should (equal (cdr (assoc "parent" post)) "1"))))
+#+END_SRC
+
 *** Data
 
 #+NAME: o2b-test-tags-as-categories
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 121
   ,#+DATE: [2013-09-14 Sat 18:29]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -232,7 +240,7 @@
 
 #+NAME: o2b-test-post-buffer-non-visible-input
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 121
   ,#+DATE: [2013-09-14 Sat 18:29]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -268,7 +276,7 @@
 
 #+NAME: o2b-test-post-buffer-hangs-input
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 127
   ,#+DATE: [2013-09-14 Sat 20:14]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -300,6 +308,23 @@
   </div>
   </div>
   </div>
+
+#+END_SRC
+
+#+NAME: o2b-test-get-parent-id
+#+BEGIN_SRC org
+  ,#+BLOG: org2blog
+  ,#+DATE: [2013-09-14 Sat 18:29]
+  ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+  ,#+TAGS: tags, sacha
+  ,#+DESCRIPTION:
+  ,#+PARENT: About
+  ,#+TITLE: Hello World
+  ,* Heading 1
+    Text
+
+  ,** Heading 2
+     More text
 
 #+END_SRC
 ** LaTeX tests
@@ -523,7 +548,7 @@
 
 #+NAME: o2b-test-regexp-source-becomes-latex-input
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 127
   ,#+DATE: [2013-09-14 Sat 20:14]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -550,7 +575,7 @@
 
 #+NAME: o2b-test-greater-than-should-not-be-escaped
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 127
   ,#+DATE: [2013-09-14 Sat 20:14]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -630,7 +655,7 @@
 *** Data
 #+NAME: o2b-test-persist-date
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 121
   ,#+DATE: [2013-09-14 Sat 18:29]
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
@@ -648,7 +673,7 @@
 
 #+NAME: o2b-test-insert-date
 #+BEGIN_SRC org
-  ,#+BLOG: localhost
+  ,#+BLOG: test
   ,#+POSTID: 121
   ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
   ,#+CATEGORY: org2blog, emacs
