Add a Gitter badge.

--- a/README.org
+++ b/README.org
@@ -3,6 +3,8 @@
 #+STARTUP: odd
 #+Style: <style> h1,h2,h3 {font-family: arial, helvetica, sans-serif} </style>
 
+[[https://gitter.im/punchagan/org2blog?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge][https://badges.gitter.im/Join Chat.svg]]
+
 * Overview
   org2blog/wp is a tool to publish directly from Emacs' org-mode to
   [[http://wordpress.org/][WordPress]] blogs.  org2blog/wp is one of the two packages named
