--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -8,10 +8,10 @@
   (setq org2blog/wp-use-sourcecode-shortcode t)
 
   (setq org2blog/wp-blog-alist
-        '(("test"
+        `(("test"
             :url "http://testorg2blog.wordpress.com/xmlrpc.php"
             :username "org2blog"
-            :password (getenv "org2blog_password")
+            :password ,(getenv "org2blog_password")
             :default-title "Hello World"
             :default-categories ("org2blog"))
           ))
