--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -68,6 +68,16 @@
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
+  (ert-deftest should-correctly-parse-subtree-tags ()
+    (should
+     (equal
+      '("gratitude" "time" "awareness" "procrastination")
+      (o2b-test-buffer-with-block
+        "o2b-test-post-subtree-input"
+        (cdr (assoc "tags" (org2blog/wp--export-as-post t)))))))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
   (ert-deftest should-not-change-output-when-subtree-demoted ()
     (should (string-equal
              ;; Expected output
@@ -105,6 +115,7 @@
   ,* Test Post
     :PROPERTIES:
     :PARENT:   20
+    :POST_TAGS: gratitude, time, awareness, procrastination
     :END:
     This is a subtree that we are testing
   ,** Sub heading 1
