--- a/tests/org2blog-tests.org
+++ b/tests/org2blog-tests.org
@@ -780,6 +780,19 @@
 
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (ert-deftest should-preserve-img-attributes ()
+    (should (and
+             (let ((output (o2b-test-buffer-with-block
+                             "o2b-test-thumbnails"
+                             (let ((org2blog/wp-show-post-in-browser nil)
+                                   (org2blog/wp-image-thumbnails t))
+                               (cdr (assoc "description" (org2blog/wp--export-as-post nil)))))))
+               (string-match-p "My fancy value for the alt attribute" output)
+               (string-match-p "super-stylish" output)))))
+
+#+END_SRC
+
 *** Data
 #+NAME: o2b-test-repost-buffer-with-image
 #+BEGIN_SRC org
@@ -798,4 +811,25 @@
     [[./test-image.png]]
 
     # ./test-image.png http://testorg2blog.files.wordpress.com/2014/11/wpid-test-image3.png
+#+END_SRC
+
+#+NAME: o2b-test-thumbnails
+#+BEGIN_SRC org
+  ,#+BLOG: test
+  ,#+POSTID: 10
+  ,#+DATE: [2014-11-05 Wed 23:21]
+  ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+  ,#+CATEGORY: org2blog, emacs
+  ,#+TAGS:
+  ,#+DESCRIPTION:
+  ,#+TITLE: Hello World
+
+  ,* Heading
+    This is an amazing blog post with an amazing image.
+
+    ,#+ATTR_HTML: :alt My fancy value for the alt attribute :style super-stylish;
+    [[./test-image.png]]
+
+    # ./test-image.png http://testorg2blog.files.wordpress.com/2014/11/wpid-test-image3.png
+
 #+END_SRC
