--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
 [[https://gitter.im/punchagan/org2blog?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge][https://badges.gitter.im/Join%20Chat.svg]] [[https://travis-ci.org/punchagan/org2blog][https://travis-ci.org/punchagan/org2blog.svg]]
 
 * Overview
-  org2blog/wp is a tool to publish directly from Emacs' org-mode to
+  org2blog/wp is a tool to publish directly from Emacs's org-mode to
   [[http://wordpress.org/][WordPress]] blogs.  org2blog/wp is one of the two packages named
   org2blog.  The other is [[http://repo.or.cz/r/org2blog.git/][org2blog/atom]] by [[http://tehom-blog.blogspot.com/][Tom Breton]].
 
