Issue 170: Automatically enable mode
- Desire: Automatically enable o2b minor mode after loading an o2b page or post
- Possible Approaches
  - file suffix
    - org2blog (o2b) files are just plain old Org-Mode files. They already
      have an extension ~.org~ so it would violate the principle of least
      astonishment to a new extension for blog pages and posts. So I don't
      like this approach.
  - magic-mode-alist or hook to check for `#+POSTID`
    - `#+POST_ID` doesn't show up until you post the file. So that wouldn't
      work.
      - magic-mode-alist doesn't work for the same reason
  - file-variables and `eval` and new post template
    - Works just fine. Whenever I use `eval` as a file local variable it is
      because I don't want to learn enough about how the mode works. But it
      it ought to be avoided if possible.
  - file header `#+org2blog`
    - Org-Mode already contains the functions to access properties
    - We can add the check to the org-mode-hook
    - This is the best approach

- Setup
- Add ~org2blog/wp-org-mode-hook-fn~ to ~org-mode-hook~
- So that ~org2blog/wp-mode~ is automatically enabled when ~#+ORG2BLOG:~ is
  present
- Add code like this somewhere after you load Org-Mode and org2blog
  #+BEGIN_SRC emacs-lisp :results output silent
(add-hook 'org-mode-hook #'org2blog/wp-org-mode-hook-fn)
  #+END_SRC
- Add ~#+ORG2BLOG:~ to your file
  - When you create a new entry it is automatically created

--- a/README.org
+++ b/README.org
@@ -205,12 +205,22 @@
 
     Similarly, for a page.
 
-*** Enabling org2blog mode (defines key-bindings)
-    - use *M-x org2blog/wp-mode*.
-      This defines the following the key-bindings:
+*** org2blog mode key-bindings and auto loading
+***** Key-Bindings
+    - ~org2blog/wp-mode~ defines the following key-bindings
       | *C-c p* | publish buffer                   |
       | *C-c d* | post as draft                    |
       | *C-c t* | complete tag or parent page name |
+***** Auto Loading org2blog Mode
+    - Add ~org2blog/wp-org-mode-hook-fn~ to ~org-mode-hook~
+    - So that ~org2blog/wp-mode~ is automatically enabled when ~#+ORG2BLOG:~ is
+      present
+    - Add code like this somewhere after you load Org-Mode and org2blog
+      #+BEGIN_SRC emacs-lisp :results output silent
+(add-hook 'org-mode-hook #'org2blog/wp-org-mode-hook-fn)
+      #+END_SRC
+    - Add ~#+ORG2BLOG:~ to your file
+      - When you create a new entry it is automatically created
 
 *** Uploading Images or Files
     In-line images and linked images (or files) with file:// urls will
