--- a/README.org
+++ b/README.org
@@ -227,10 +227,10 @@
       - When you create a new entry it is automatically created
 
 *** Uploading Images or Files
-    In-line images and linked images (or files) with file:// urls will
-    be uploaded to the media library and the links will be updated.
-    Information about uploaded files is added as a comment to the post
-    itself.
+    Only in-line images and linked images (or files) with file:// URLs are
+    supported. They will be uploaded to the media library and the links will
+    be updated. Information about uploaded files is added as a comment to the
+    post itself.
 
     Captions and attributes as [[http://orgmode.org/manual/Images-in-HTML-export.html][defined]] in org-mode will be preserved,
     but these attributes are not saved with the image to the library
