--- a/README.org
+++ b/README.org
@@ -162,11 +162,30 @@
     is not made.
 
 *** Publishing
+***** Keybindings
     | post buffer as draft      | *C-c M-p d* | *M-x     org2blog/wp-post-buffer*         |
     | publish buffer            | *C-c M-p p* | *C-u M-x org2blog/wp-post-buffer*         |
     | post buffer as page draft | *C-c M-p D* | *M-x     org2blog/wp-post-buffer-as-page* |
     | publish buffer as page    | *C-c M-p P* | *C-u M-x org2blog/wp-post-buffer-as-page* |
+***** After Publishing Access The Metadata
+Now your post or page exists both in your Org-Mode file on your computer, and
+also in WordPress itself. That page or post inside of WordPress contains a lot
+of metadata and you might be interested in some of it. [[https://codex.wordpress.org/XML-RPC_MetaWeblog_API][Here]] is documentation
+covering all of the fields. You can easily access that data using a hook function.
 
+After publishing your post or page, Org2Blog calls the functions in
+~org2blog/wp-after-new-post-or-page-functions~ passing them the post or page
+metadata. Maybe you've never seen a hook function like this before because it
+takes an argument. They are still just plain old functions. Here they need to
+accept one argument so that Org2Blog can give you that metadata. It is pretty
+simple.
+
+Here is an example that displays your post or page information in the
+=*Messages*= buffer:
+
+#+BEGIN_SRC emacs-lisp
+(add-hook 'org2blog/wp-after-new-post-or-page-functions (lambda (p) (pp p)))
+#+END_SRC
 *** Post your existing org-files too
     - Add =#+TITLE=, =#+OPTIONS=, =#+TAGS=, =#+CATEGORY=,
           =#+DESCRIPTION=, =#+DATE=, to your file.  (All of these are
